fix: inconsistant spacing in letter density lines in mobile

--- a/src/style.css
+++ b/src/style.css
@@ -302,11 +302,11 @@ h2 {
 }
 
 .letter span:first-of-type {
-  width: 1rem;
+  min-width: 1rem;
 }
 
 .letter span:last-of-type {
-  width: 7rem;
+  min-width: 6rem;
   text-align: end;
 }
 
